--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
 /* Variables de color */
 :root {
-  --color1: #00233B; /* fondo principal */
-  --color2: #0067B0; /* acento oscuro */
-  --color3: #0093CC; /* acento medio */
-  --color4: #00A4E3; /* detalles y hover */
-  --color5: #FFFFFA; /* fondo claro / texto secundario */
+  --Azul1:      #003E57;
+  --Azul2:      #005B80;
+  --Turquesa1:  #0079A8; 
+  --Turquesa2:  #0092CC;
+  --Turquesa3:  #00B3FA;
+  --Blanco:     #fffffe;
   --font-alt: "Lora", serif;
   --font-main: "Open Sans", sans-serif;
 }
@@ -22,8 +23,8 @@ html {
 
 body {
   font-family: var(--font-main);
-  background-color: var(--color1);
-  color: var(--color5);
+  background-color: var(--Blanco);
+  color: var(--Azul1);
   line-height: 1.6;
   font-size: 1rem;
 }
@@ -38,7 +39,7 @@ body {
 
 /* Encabezado */
 header {
-  background-color: var(--color5);
+  background-color: var(--Blanco);
   text-align: center;
 
   /* centra horizontal el logo */
@@ -57,20 +58,9 @@ nav {
   justify-content: center;
   gap: 2rem;
   flex-wrap: wrap;
-  background-color: var(--color5);
+  background-color: var(--Blanco);
   padding: 1rem;
 }
-
-/* nav a {
-  color: red;
-  text-decoration: none;
-  font-weight: bold;
-  transition: color 0.3s ease;
-}
-
-nav a:hover {
-  color: var(--color4);
-} */
 
 /* Secciones */
 section {
@@ -80,13 +70,12 @@ section {
 section h2 {
   font-size: 1.8rem;
   margin-bottom: 1rem;
-  color: var(--color5);
+  color: var(--Blanco);
 }
 
 section p {
   font-size: 20px;
 }
-
 
 /* Responsive Grid */
 .grid {
@@ -102,14 +91,14 @@ img {
 
 /* HERO SECTION */
 .hero {
-  background: url("./assets/images/bg.jpg") center/cover no-repeat;
+  background: url("./assets/images/imagen\ fondo.jpg") center/cover no-repeat;
   padding: 2rem 1rem 0.3rem;
   position: relative;
   text-align: center;
 }
 
 .overlay {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(10, 10, 10, 0.50);
   padding: 2rem;
   border-radius: 10px;
   max-width: 1200px;
@@ -133,10 +122,11 @@ img {
   /*display: flex;*/
   flex-direction: column;
   justify-content: space-between;
-  color: var(--color5);
+  color: var(--Blanco);
+  background-color: rgba(10, 10, 10, 0.70);
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 4px 10px rgb(0, 0, 0, 0.50);
   flex: 1;
   min-width: 250px;
   max-width: 350px;
@@ -156,8 +146,8 @@ img {
 }
 
 .overlay button {
-  background-color: var(--color2);
-  color: var(--color1);
+  background-color: var(--Turquesa1);
+  color: var(--Blanco);
   border: none;
   padding: 0.5cm 2.2cm;
   margin-top: 1rem;
@@ -168,7 +158,7 @@ img {
 }
 
 .overlay button:hover {
-  background-color: var(--color3);
+  background-color: var(--Azul2);
 }
 
 /* POPUP */
@@ -186,13 +176,14 @@ img {
 }
 
 .popup-content {
-  background-color: var(--color1);
+  background-color: var(--Azul2);
   padding: 2rem;
   border-radius: 10px;
   width: 90%;
   max-width: 500px;
   max-height: 90vh;
   overflow-y: auto;
+  color: var(--Blanco);
 }
 
 /* Popup de resultados necesita ser más ancho */
@@ -203,7 +194,7 @@ img {
 
 .popup-content h2 {
   margin-bottom: 1rem;
-  color: white;
+  color: var(--Blanco);
   text-align: center;
 }
 
@@ -220,25 +211,26 @@ img {
 }
 
 .popup-content button {
-  background-color: var(--color3);
-  color: var(--color1);
+  background-color: var(--Turquesa1);
+  color: var(--Blanco);
   font-weight: bold;
 }
 
 .popup-content button:hover {
-  background-color: var(--color4);
+  background-color: var(--Azul1);
+  cursor: pointer;
 }
 
 .close {
   float: right;
   font-size: 1.5rem;
   cursor: pointer;
-  color: white;
+  color: var(--Blanco);
   margin-bottom: 1rem;
 }
 
 .close:hover {
-  color: var(--color3);
+  color: var(--Azul1);
 }
 
 /* Estilos para las tarjetas dentro del popup de resultados */
@@ -251,11 +243,11 @@ img {
 }
 
 .popup .card {
-  background: white;
+  background: whitesmoke;
   border-radius: 10px;
   padding: 1.5rem;
   text-align: center;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.20);
   min-width: 280px;
   flex: 1;
   max-width: 300px;
@@ -264,13 +256,13 @@ img {
 .popup .card h4 {
   margin: 1rem 0 0.5rem;
   color: #333;
-  font-size: 1.2rem;
+  font-size: 1.25rem;
 
 }
 
 .popup .card p {
   margin: 0.5rem 0;
-  color: #666;
+  color: rgb(50, 50, 50);
   line-height: 1.4;
 }
 
@@ -280,7 +272,7 @@ img {
 
 .popup .card em {
   font-size: 0.9rem;
-  color: #888;
+  color: #555;
 }
 
 .popup .card-green {
@@ -343,10 +335,11 @@ img {
 
 .emphasized-title {
   font-size: 1.6rem;
-  color: var(--color4);
+  color: var(--Blanco);
   margin-bottom: 0.2cm;
   margin-top: 0.8cm;
   text-align: center;
+  background-color: var(--Azul1);
 }
 
 .benefits-container {
@@ -357,15 +350,16 @@ img {
 }
 
 .benefit-card {
-  background-color: var(--color2);
+  background-color: var(--Azul2);
   padding: 1rem;
   border-radius: 8px;
   text-align: center;
+  box-shadow: 4px 4px 10px rgb(0, 0, 0, 0.30);
 }
 
 .list-container {
   display: flex;
-  felx-direction: column;
+  flex-direction: column;
   justify-content: center;
 }
 
@@ -386,13 +380,14 @@ img {
 /* CONTACTO */
 .contact {
   padding: 1.75rem 1rem 3rem;
-  background-color: var(--color2);
-  border-top: 2px solid var(--color4);
+  background-color: var(--Turquesa1);
+  border-top: 2px solid var(--Turquesa2);
+  border-bottom: 2px solid var(--Turquesa2);
 }
 
 .contact h3{
   font-size: 1.6rem;
-  color: var(--color4);
+  color: var(--Azul1);
   text-align: center;
   margin-bottom: 0.4cm;
 }
@@ -411,39 +406,50 @@ img {
   border: none;
   border-radius: 5px;
 }
+.contact textarea {
+    resize: none;
+}
+
+.contact input::placeholder,
+.contact textarea::placeholder {
+  font-family: var(--font-main)
+}
 
 .contact button {
   padding: 0.75rem;
-  background-color: var(--color3);
-  color: var(--color1);
+  background-color: var(--Turquesa2);
+  color: var(--Azul1);
   font-weight: bold;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  width: 120px;
+  margin: 0 auto;
 }
 
 .contact button:hover {
-  background-color: var(--color4);
+  background-color: var(--Azul2);
+  color: var(--Blanco);
 }
 
 /* WHATSAPP FLOAT */
 .whatsapp-float {
   position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background-color: #25d366;
-  color: white;
-  border-radius: 50%;
-  padding: 1rem;
-  font-size: 1.5rem;
-  z-index: 1000;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  bottom: 0.5cm; /* distancia desde abajo */
+  right: 1cm;  /* distancia desde la derecha */
+  z-index: 1000; /* para que quede siempre visible arriba de todo */
 }
 
-.whatsapp-float:hover {
-  background-color: #1ebe5d;
+.whatsapp-float img {
+  width: 62px;  /* tamaño pequeño */
+  height: 62px;
+  border-radius: 50%; /* redondeado (opcional, podés sacar esta línea si no querés redondeo) */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3); /* sombra sutil (opcional) */
+  transition: transform 5s ease-in-out; /* animación al pasar el mouse */
+}
+
+.whatsapp-float:hover{
+  transform: scale(1.1);
 }
 
 /* FOOTER */
