--- a/styles.css
+++ b/styles.css
@@ -40,11 +40,9 @@ body {
 /* Encabezado */
 header {
   background-color: var(--Blanco);
-  text-align: center;
-
-  /* centra horizontal el logo */
-  display: flex;
-  justify-content: center;
+  /* text-align: center; */
+  /* display: flex; */
+  /* justify-content: center; */
 }
 
 header img {
@@ -53,13 +51,39 @@ header img {
 }
 
 /* Navegación */
-nav {
+.navbar {
   display: flex;
-  justify-content: center;
-  gap: 2rem;
-  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
   background-color: var(--Blanco);
-  padding: 1rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.logo img {
+  display: block;
+}
+
+.menu-toggle {
+  display: none;
+  font-size: 2rem;
+  cursor: pointer;
+}
+
+.nav-links {
+  display: flex;
+  gap: 1.5rem;
+}
+
+.nav-links a {
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+  transition: color 0.3s ease;
+}
+
+.nav-links a:hover {
+  color: var(--Turquesa1);
 }
 
 /* Secciones */
@@ -489,8 +513,41 @@ footer a:hover {
   color: var(--color5);
 }
 
+/* --- Responsive --- */
+@media (max-width: 768px) {
+  .nav-links {
+    display: none;
+    position: absolute;
+    top: 112px; /* altura del navbar */
+    left: 0;
+    right: 0;
+    background-color: white;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    padding: 1rem 0;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  }
 
-/* MEDIA QUERIES */
+  .nav-links.show {
+    display: flex;
+  }
+
+  .menu-toggle {
+    display: block;
+  }
+}
+
+@media (max-width: 500px) {
+  .navbar {
+    justify-content: end;
+  }
+  .logo {
+    display: none;
+  }
+
+}
+
 @media (min-width: 500px) {
   .cards-container {
     flex-direction: row;
@@ -507,11 +564,6 @@ footer a:hover {
 
   .benefit-card {
     flex: 1;
-  }
-
-  nav {
-    justify-content: space-between;
-    padding: 1rem 2rem;
   }
 
   .footer-icons {
