--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,9 @@
   --Turquesa1:  #0079A8; 
   --Turquesa2:  #0092CC;
   --Turquesa3:  #00B3FA;
-  --Blanco:     #fffffe;
-  --font-alt: "Lora", serif;
-  --font-main: "Open Sans", sans-serif;
+  --Blanco:     #fffffa;
+  --font-main: "Montserrat";
+  --font-title:"Merriweather";
 }
 
 /* Reset básico */
@@ -91,14 +91,21 @@ img {
 
 /* HERO SECTION */
 .hero {
-  background: url("./assets/images/imagen\ fondo.jpg") center/cover no-repeat;
-  padding: 2rem 1rem 0.3rem;
+  background: 
+    linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url("./assets/images/imagen fondo.jpg") center/cover no-repeat;
+  padding: 1rem 1rem 1rem;
   position: relative;
   text-align: center;
 }
 
 .overlay {
-  background-color: rgba(10, 10, 10, 0.50);
+  background: rgba(30, 30, 30, 0.1);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  border-left: 1px solid rgba(255, 255, 255, 0.5);
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(5px);
   padding: 2rem;
   border-radius: 10px;
   max-width: 1200px;
@@ -123,14 +130,16 @@ img {
   flex-direction: column;
   justify-content: space-between;
   color: var(--Blanco);
-  background-color: rgba(10, 10, 10, 0.70);
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 4px 10px rgb(0, 0, 0, 0.50);
   flex: 1;
   min-width: 250px;
   max-width: 350px;
   text-align: center;
+  /*background: rgba(255, 255, 255, 0.1);*/
+  box-shadow: 0 4px 10px rgb(0, 0, 0, 0.50);
+  border-left: 1px solid rgba(255, 255, 255, 0.5);
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 .card img.company-logo {
