--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,8 @@ header img {
   display: block;
 }
 
-.menu-toggle {
+.menu-abrir,
+.menu-cerrar {
   display: none;
   font-size: 2rem;
   cursor: pointer;
@@ -117,7 +118,6 @@ img {
 .hero {
   background: url("./assets/images/imagen\ fondo.jpg") center/cover no-repeat;
   padding: 2rem 1rem 0.3rem;
-  position: relative;
   text-align: center;
 }
 
@@ -319,28 +319,6 @@ img {
   margin-bottom: 0.5rem;
 }
 
-/* Responsive para pantallas pequeñas */
-@media (max-width: 768px) {
-  .popup-content {
-    padding: 1rem;
-    width: 95%;
-  }
-
-  #popupResultados .popup-content {
-    max-width: 95%;
-  }
-
-  .popup .cards-container {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .popup .card {
-    max-width: 100%;
-    min-width: auto;
-  }
-}
-
 /* INSURANCE INFO */
 .insurance-info {
   padding: 0cm 1.5cm; /* top, right, bottom, left */
@@ -513,41 +491,7 @@ footer a:hover {
   color: var(--color5);
 }
 
-/* --- Responsive --- */
-@media (max-width: 768px) {
-  .nav-links {
-    display: none;
-    position: absolute;
-    top: 112px; /* altura del navbar */
-    left: 0;
-    right: 0;
-    background-color: white;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
-    padding: 1rem 0;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  }
-
-  .nav-links.show {
-    display: flex;
-  }
-
-  .menu-toggle {
-    display: block;
-  }
-}
-
-@media (max-width: 500px) {
-  .navbar {
-    justify-content: end;
-  }
-  .logo {
-    display: none;
-  }
-
-}
-
+/*MEDIA QUERIES*/
 @media (min-width: 500px) {
   .cards-container {
     flex-direction: row;
@@ -571,4 +515,73 @@ footer a:hover {
     justify-content: center;
     gap: 2rem;
   }
+}
+
+/* --- Responsive --- */
+/* Responsive para pantallas pequeñas */
+@media screen and (max-width: 768px) {
+  .menu-abrir,
+  .menu-cerrar {
+    display: block;
+  }
+
+  .nav {
+    opacity: 0;
+    visibility: hidden;
+
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    position: absolute;
+    z-index: 9999;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--Blanco);
+    padding: 2rem;
+    box-shadow: 0 0 0 100vmax rgba(0,0,0,0.5);
+  }
+
+  .nav.visible {
+    opacity: 1;
+    visibility: visible;
+  }
+
+  .nav-links {
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    gap: 1.2rem;
+  }
+
+  .popup-content {
+    padding: 1rem;
+    width: 95%;
+  }
+
+  #popupResultados .popup-content {
+    max-width: 95%;
+  }
+
+  .popup .cards-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .popup .card {
+    max-width: 100%;
+    min-width: auto;
+  }
+}
+
+@media (max-width: 500px) {
+  .navbar {
+    height: 70px;
+    justify-content: end;
+  }
+  .logo {
+    display: none;
+  }
+
 }
