--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,12 @@
-/* Variables de color */
 :root {
-  --Azul1:      #003E57;
-  --Azul2:      #005B80;
-  --Turquesa1:  #0079A8; 
-  --Turquesa2:  #0092CC;
-  --Turquesa3:  #00B3FA;
-  --Blanco:     #fffffa;
+  --Azul1: #003e57;
+  --Azul2: #005b80;
+  --Turquesa1: #0079a8;
+  --Turquesa2: #0092cc;
+  --Turquesa3: #00b3fa;
+  --Blanco: #fffffa;
   --font-main: "Montserrat";
-  --font-title:"Merriweather";
+  --font-title: "Merriweather";
 }
 
 /* Reset básico */
@@ -25,123 +24,159 @@ body {
   font-family: var(--font-main);
   background-color: var(--Blanco);
   color: var(--Azul1);
-  line-height: 1.6;
-  font-size: 1rem;
 }
 
-/* Layout responsive */
-.container {
-  width: 90%;
-  max-width: 1200px;
-  margin: auto;
-  padding: 2rem 1rem;
-}
-
-/* Encabezado */
-header {
-  background-color: var(--Blanco);
-  /* text-align: center; */
-  /* display: flex; */
-  /* justify-content: center; */
-}
-
-header img {
-  width: 350px;
-  height: auto;
-}
-
-/* Navegación */
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem 2rem;
-  background-color: var(--Blanco);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.logo img {
-  display: block;
-}
-
-.menu-abrir,
-.menu-cerrar {
-  display: none;
-  font-size: 2rem;
-  cursor: pointer;
-}
-
-.nav-links {
-  display: flex;
-  gap: 1.5rem;
-}
-
-.nav-links a {
-  text-decoration: none;
-  color: #333;
-  font-weight: 500;
-  transition: color 0.3s ease;
-}
-
-.nav-links a:hover {
-  color: var(--Turquesa1);
-}
-
-/* Secciones */
 section {
+  scroll-margin-top: 100px; /*ajusta el margen superior para que la pag no quede abajo del header*/
   padding: 3rem 0;
 }
 
-section h2 {
-  font-size: 1.8rem;
-  margin-bottom: 1rem;
-  color: var(--Blanco);
+/* Boton flotante */
+.whatsapp-float {
+  text-decoration: none;
+  position: fixed;
+  bottom: 0.5cm; /* distancia desde abajo */
+  right: 0.6cm; /* distancia desde la derecha */
+  z-index: 1000; /* para que quede siempre visible arriba de todo */
+  transition: all 300ms;
 }
 
-section p {
-  font-size: 20px;
+.whatsapp-float img {
+  width: 62px; /* tamaño pequeño */
+  height: 62px;
+  border-radius: 50%; /* redondeado (opcional, podés sacar esta línea si no querés redondeo) */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3); /* sombra sutil (opcional) */
 }
 
-/* Responsive Grid */
-.grid {
-  display: grid;
-  gap: 2rem;
+.whatsapp-float:hover {
+  transform: scale(1.1);
 }
 
-/* Imágenes responsivas */
-img {
-  width: 100%;
-  height: auto;
+/*Header*/
+header {
+  /* linea de color al principio */
+  width: 100%; /* el elemento ocupa el 100% del ancho */
+  height: 115px; /* altura del elemento */
+  background-color: var(--Blanco);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  display: flex; /*para que sus elementos esten horizontal*/
+  position: fixed; /* Fija el elemento en una posición específica de la ventana del navegador, incluso durante el desplazamiento. */
+  top: 0; /* pone al elemento en el borde superior de la pagina */
+  z-index: 12;
 }
 
-/* HERO SECTION */
-.hero {
+#logo {
+  width: auto;
+  height: 85px;
+  margin-left: 0.7cm;
+  margin-top: 0.3cm;
+}
 
-  background: 
-    linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+nav {
+  width: 50%;
+  max-width: 300px;
+  height: 50px;
+}
+
+nav > ul {
+  display: flex; /* para que las palabras se alinean horizontalmente*/
+  justify-content: space-evenly; /* para que el espacio sea igual entre todos*/
+  gap: 28px; /* espacio entre los elementos*/
+  list-style-type: none; /* elimina los puntos de la lista desordenada*/
+  margin-top: 45px; /* margen superior*/
+  white-space: nowrap; /*el contenido este en la misma linea*/
+  margin-left: 10cm;
+  padding: 0; /* Elimina el padding del ul */
+  text-align: right;
+}
+
+nav a {
+  font-family: var(--font-main);
+  font-weight: 500;
+  font-size: 19px;
+  font-style: italic;
+  color: var(--Azul1);
+  text-decoration: none;
+}
+
+nav a:hover {
+  color: var(--Azul2);
+}
+
+/*Inicio*/
+.seccion-inicio {
+  height: 651px;
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
     url("./assets/images/imagen fondo.jpg") center/cover no-repeat;
   padding: 1rem 1rem 1rem;
   position: relative;
-
-  text-align: center;
+  text-align: left;
+  margin-top: 115px;
+  color: var(--Blanco);
+  overflow: hidden;
 }
 
+.contenido-inicio {
+  position: absolute;
+  bottom: 25px; /* distancia desde abajo */
+  left: 30px; /* distancia desde la izquierda */
+
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 3rem; /* espacio entre columnas */
+  max-width: 1300px;
+  margin: 0 auto;
+  padding: 0.5cm;
+}
+
+.seccion-inicio h1 {
+  font-size: 2.2rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.seccion-inicio em {
+  font-style: italic;
+  font-weight: bold;
+}
+
+.columna-izquierda {
+  max-width: 800px;
+}
+
+.columna-izquierda p {
+  font-size: 1.2em;
+  line-height: 1.7;
+  margin-bottom: 1.5rem;
+}
+
+.columna-derecha ul {
+  list-style: disc;
+  padding-left: 1.5rem;
+  font-size: 1.2em;
+  text-align: left;
+  line-height: 1.7;
+  margin-bottom: 1.5rem;
+}
+
+/*Cotizar*/
+.cotizar {
+  background-color: var(--Azul1);
+  text-align: center;
+}
 .overlay {
-  background: rgba(30, 30, 30, 0.1);
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-  border-left: 1px solid rgba(255, 255, 255, 0.5);
-  border-top: 1px solid rgba(255, 255, 255, 0.5);
-  backdrop-filter: blur(3px);
-  -webkit-backdrop-filter: blur(5px);
   padding: 2rem;
   border-radius: 10px;
   max-width: 1200px;
   margin: auto;
 }
 
-.hero h2 {
+.cotizar h2 {
   font-size: 2rem;
   margin-bottom: 2rem;
+  color: var(--Blanco);
+  font-weight: 400;
 }
 
 /* CARDS */
@@ -163,15 +198,16 @@ img {
   min-width: 250px;
   max-width: 350px;
   text-align: center;
-  /*background: rgba(255, 255, 255, 0.1);*/
-  box-shadow: 0 4px 10px rgb(0, 0, 0, 0.50);
+  background: rgba(255, 255, 255, 0.35);
+  box-shadow: 0 4px 10px rgb(0, 0, 0, 0.5);
   border-left: 1px solid rgba(255, 255, 255, 0.5);
   border-top: 1px solid rgba(255, 255, 255, 0.5);
+  transition: all 300ms;
 }
 
 .card img.company-logo {
   width: 100%; /* Asegura el ancho completo */
-  height: 100px; /* Altura estándar para todas las imágenes */
+  height: 90px; /* Altura estándar para todas las imágenes */
   object-fit: contain; /* O 'cover' si prefieres recorte en lugar de ajuste */
   margin: 10px 0;
 }
@@ -181,16 +217,20 @@ img {
   margin: 1rem 0;
 }
 
+.card:hover {
+  transform: translateY(-10px);
+}
+
 .overlay button {
   background-color: var(--Turquesa1);
   color: var(--Blanco);
   border: none;
   padding: 0.5cm 2.2cm;
-  margin-top: 1rem;
+  margin-top: 1.1em;
   cursor: pointer;
-  font-weight: bold;
+  font-family: var(--font-main);
   border-radius: 5px;
-  transition: background-color 0.3s ease;
+  transition: all 300ms;
 }
 
 .overlay button:hover {
@@ -223,6 +263,16 @@ img {
 }
 
 /* Popup de resultados necesita ser más ancho */
+
+.title-form {
+  display: flex;
+  align-items: flex-start;
+}
+
+.title-popup {
+  padding-bottom: 1.5rem;
+}
+
 #popupResultados .popup-content {
   max-width: 1000px;
   width: 95%;
@@ -284,17 +334,16 @@ img {
   border-radius: 10px;
   padding: 1.5rem;
   text-align: center;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.20);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   min-width: 280px;
   flex: 1;
   max-width: 300px;
 }
 
-.popup .card h4 {
+.popup .card h3 {
   margin: 1rem 0 0.5rem;
   color: #333;
   font-size: 1.25rem;
-
 }
 
 .popup .card p {
@@ -331,88 +380,74 @@ img {
   margin-bottom: 0.5rem;
 }
 
-/* INSURANCE INFO */
-.insurance-info {
-  padding: 0cm 1.5cm; /* top, right, bottom, left */
+/*Beneficios y Requisitos*/
+#Beneficios-Requisitos {
+  padding: 70px 20px;
+  background-color: white;
+  font-family: "Poppins", sans-serif;
 }
 
-.insurance-info p {
+.contenedor-beneficios-requisitos {
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+  max-width: 1200px;
+  margin: auto;
+  border-left: none;
+  border-right: none;
+}
+
+.columna-iz,
+.columna-der {
+  flex: 1;
+}
+
+.columna-izq {
+  max-width: 600px;
+}
+
+h4 {
+  font-size: 30px;
   text-align: center;
-  margin-bottom: 1em;
-  font-size: 1.25rem;
+  margin-bottom: 1cm;
+  color: var(--Azul1);
+  font-family: var(--font-title);
 }
 
-.insurance-info ul {
-  margin: 1rem 0;
+.contenedor-beneficios-requisitos ul {
   list-style-type: disc;
-  padding-left: 1.5rem;
-  font-size: 1.25rem;
+  padding-left: 20px;
 }
 
-.emphasized-title {
+.contenedor-beneficios-requisitos li {
+  margin-bottom: 15px;
+  font-size: 18px;
+  color: #033b4a;
+  line-height: 1.6;
+}
+
+.linea-divisoria {
+  width: 0.8px;
+  background-color: var(--Azul1);
+  height: auto;
+}
+
+/*Contacto*/
+.contacto {
+  padding: 1.75rem 1rem 3rem;
+  background-color: var(--Azul2);
+  border-top: 2px solid var(--Turquesa1);
+  border-bottom: 2px solid var(--Turquesa1);
+}
+
+.contacto h5 {
   font-size: 1.6rem;
   color: var(--Blanco);
-  margin-bottom: 0.2cm;
-  margin-top: 0.8cm;
-  text-align: center;
-  background-color: var(--Azul1);
-}
-
-.benefits-container {
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-  margin: 1rem 0;
-}
-
-.benefit-card {
-  background-color: var(--Azul2);
-  padding: 1rem;
-  border-radius: 8px;
-  text-align: center;
-  box-shadow: 4px 4px 10px rgb(0, 0, 0, 0.30);
-}
-
-.benefit-card h4 {
-  margin-bottom: 0.2em;
-}
-
-.list-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-.list {
-  max-width: fit-content;
-  margin-top: 0.5rem;
-  margin-bottom: 1rem;
-  padding-left: 1.5rem;
-}
-
-.list li {
-  margin-bottom: 0.5rem;
-}
-
-.renglon {
-  margin: 1.5rem;
-}
-/* CONTACTO */
-.contact {
-  padding: 1.75rem 1rem 3rem;
-  background-color: var(--Turquesa1);
-  border-top: 2px solid var(--Turquesa2);
-  border-bottom: 2px solid var(--Turquesa2);
-}
-
-.contact h3{
-  font-size: 1.6rem;
-  color: var(--Azul1);
   text-align: center;
   margin-bottom: 0.4cm;
 }
 
-.contact form {
+.contacto form {
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -420,25 +455,25 @@ img {
   margin: auto;
 }
 
-.contact input,
-.contact textarea {
+.contacto input,
+.contacto textarea {
   padding: 0.75rem;
   border: none;
   border-radius: 5px;
   resize: none;
 }
-.contact textarea {
-    resize: none;
+.contacto textarea {
+  resize: none;
 }
 
-.contact input::placeholder,
-.contact textarea::placeholder {
-  font-family: var(--font-main)
+.contacto input::placeholder,
+.contacto textarea::placeholder {
+  font-family: var(--font-main);
 }
 
-.contact button {
+.contacto button {
   padding: 0.75rem;
-  background-color: var(--Turquesa2);
+  background-color: var(--Turquesa1);
   color: var(--Azul1);
   font-weight: bold;
   border: none;
@@ -446,154 +481,14 @@ img {
   cursor: pointer;
   width: 120px;
   margin: 0 auto;
+  transition: all 300ms;
 }
 
-.contact button:hover {
-  background-color: var(--Azul2);
+.contacto button:hover {
+  background-color: var(--Azul1);
   color: var(--Blanco);
 }
 
-/* WHATSAPP FLOAT */
-.whatsapp-float {
-  text-decoration: none;
-  position: fixed;
-  bottom: 0.5cm; /* distancia desde abajo */
-  right: 1cm;  /* distancia desde la derecha */
-  z-index: 1000; /* para que quede siempre visible arriba de todo */
-}
+/*Footer*/
 
-.whatsapp-float img {
-  width: 62px;  /* tamaño pequeño */
-  height: 62px;
-  border-radius: 50%; /* redondeado (opcional, podés sacar esta línea si no querés redondeo) */
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3); /* sombra sutil (opcional) */
-  transition: transform 5s ease-in-out; /* animación al pasar el mouse */
-}
-
-.whatsapp-float:hover{
-  transform: scale(1.1);
-}
-
-/* FOOTER */
-footer {
-  background-color: var(--color3);
-  padding: 1.5rem;
-  text-align: center;
-  color: var(--color1);
-}
-
-footer a {
-    color: var(--color1);
-    text-decoration: none;
-    transition: font-weight 0.1s ease;
-    font-weight: 600;
-}
-.footer-icons {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-  margin-top: 1rem;
-}
-
-.footer-icons a {
-  color: var(--color1);
-  text-decoration: none;
-}
-footer a:hover {
-  color: var(--color5);
-}
-
-/*MEDIA QUERIES*/
-@media (min-width: 500px) {
-  .cards-container {
-    flex-direction: row;
-  }
-
-  .card {
-    text-align: center;
-  }
-
-  .benefits-container {
-    flex-direction: row;
-    justify-content: space-between;
-  }
-
-  .benefit-card {
-    flex: 1;
-  }
-
-  .footer-icons {
-    flex-direction: row;
-    justify-content: center;
-    gap: 2rem;
-  }
-}
-
-/* --- Responsive --- */
-/* Responsive para pantallas pequeñas */
-@media screen and (max-width: 768px) {
-  .menu-abrir,
-  .menu-cerrar {
-    display: block;
-  }
-
-  .nav {
-    opacity: 0;
-    visibility: hidden;
-
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-    position: absolute;
-    z-index: 9999;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    background-color: var(--Blanco);
-    padding: 2rem;
-    box-shadow: 0 0 0 100vmax rgba(0,0,0,0.5);
-  }
-
-  .nav.visible {
-    opacity: 1;
-    visibility: visible;
-  }
-
-  .nav-links {
-    padding: 0.5rem;
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-    gap: 1.2rem;
-  }
-
-  .popup-content {
-    padding: 1rem;
-    width: 95%;
-  }
-
-  #popupResultados .popup-content {
-    max-width: 95%;
-  }
-
-  .popup .cards-container {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .popup .card {
-    max-width: 100%;
-    min-width: auto;
-  }
-}
-
-@media (max-width: 500px) {
-  .navbar {
-    height: 70px;
-    justify-content: end;
-  }
-  .logo {
-    display: none;
-  }
-
-}
+/*Responsive*/
