--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,6 @@ section {
 
 /*Header*/
 header {
-  /* linea de color al principio */
   width: 100%; /* el elemento ocupa el 100% del ancho */
   height: 115px; /* altura del elemento */
   background-color: var(--Blanco);
@@ -65,6 +64,22 @@ header {
   z-index: 12;
 }
 
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+  background-color: var(--Blanco);
+  /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
+}
+
+.menu-abrir,
+.menu-cerrar {
+  display: none;
+  font-size: 2rem;
+  cursor: pointer;
+}
+
 #logo {
   width: auto;
   height: 85px;
@@ -72,34 +87,35 @@ header {
   margin-top: 0.3cm;
 }
 
-nav {
-  width: 50%;
-  max-width: 300px;
-  height: 50px;
-}
-
-nav > ul {
+.navbar ul {
   display: flex; /* para que las palabras se alinean horizontalmente*/
   justify-content: space-evenly; /* para que el espacio sea igual entre todos*/
   gap: 28px; /* espacio entre los elementos*/
   list-style-type: none; /* elimina los puntos de la lista desordenada*/
-  margin-top: 45px; /* margen superior*/
+  /* margin-top: 0.2em; /* margen superior*/ */
   white-space: nowrap; /*el contenido este en la misma linea*/
-  margin-left: 10cm;
+  /* margin-left: 10cm; */
   padding: 0; /* Elimina el padding del ul */
   text-align: right;
 }
 
-nav a {
+.nav-links {
+  display: flex;
+  flex-direction: row;
+  gap: 1.5rem;
+}
+
+.nav-links a {
+  text-decoration: none;
   font-family: var(--font-main);
   font-weight: 500;
   font-size: 19px;
   font-style: italic;
   color: var(--Azul1);
-  text-decoration: none;
+  transition: color 0.3s ease;
 }
 
-nav a:hover {
+.nav-links a:hover {
   color: var(--Azul2);
 }
 
@@ -117,7 +133,7 @@ nav a:hover {
 }
 
 .contenido-inicio {
-  position: absolute;
+  position: relative;
   bottom: 25px; /* distancia desde abajo */
   left: 30px; /* distancia desde la izquierda */
 
@@ -492,3 +508,79 @@ h4 {
 /*Footer*/
 
 /*Responsive*/
+/* --- Responsive --- */
+/* Responsive para pantallas pequeñas */
+@media screen and (max-width: 970px) {
+  header {
+    justify-content: space-between;
+  }
+
+  #logo {
+    position: relative;
+    left: 0;
+  }
+
+  .menu-abrir,
+  .menu-cerrar {
+    display: block;
+  }
+
+  .nav {
+    opacity: 0;
+    visibility: hidden;
+
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    position: absolute;
+    z-index: 999;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--Blanco);
+    padding: 2rem;
+    box-shadow: 0 0 0 100vmax rgba(0,0,0,0.5);
+  }
+
+  .nav.visible {
+    height: 100vmax;
+    opacity: 1;
+    visibility: visible;
+  }
+
+  .nav ul {
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    gap: 1.2rem;
+  }
+
+  .popup-content {
+    padding: 1rem;
+    width: 95%;
+  }
+
+  #popupResultados .popup-content {
+    max-width: 95%;
+  }
+
+  .popup .cards-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .popup .card {
+    max-width: 100%;
+    min-width: auto;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  header {
+    justify-content: end;
+  }
+  #logo {
+    display: none;
+  }
+}
